<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/movieIcon"
                android:layout_width="330dp"
                android:layout_height="430dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-39dp" />


            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="440dp"
                android:ellipsize="end"
                android:textColor="#141414"
                android:textSize="60px"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/movieDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/movieIcon"
                android:ellipsize="end"
                android:textColor="#141414"
                android:textSize="50px"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/movieGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="160dp"
                android:layout_toRightOf="@id/movieIcon"
                android:ellipsize="end"
                android:textColor="#141414"
                android:textSize="50px"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/movieDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="250dp"
                android:layout_toRightOf="@id/movieIcon"
                android:ellipsize="end"
                android:textColor="#141414"
                android:textSize="50px"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/movieYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="330dp"
                android:layout_toRightOf="@id/movieIcon"
                android:ellipsize="end"
                android:textColor="#141414"
                android:textSize="50px"
                android:textStyle="bold"
                android:typeface="monospace" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/green_background"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/top_rounded_rectangle"
                android:backgroundTint="@color/teal_200" />

            <TextView
                android:id="@+id/movieSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ellipsize="end"
                android:textColor="#141414"
                android:textSize="50px"
                android:textStyle="bold"
                android:typeface="monospace" />

            <HorizontalScrollView
                android:id="@+id/scroll_actor_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:id="@+id/actor_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                </LinearLayout>

            </HorizontalScrollView>

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/multiple_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="270dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:fabSize="normal"
                app:fab_expandDirection="down"
                fab:fab_labelStyle="@style/fab_labels_style">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorPressed="#ffffff"
                    fab:fab_size="mini"
                    fab:fab_title="PTW" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorPressed="#ffffff"
                    fab:fab_size="mini"
                    fab:fab_title="WATCHING" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorPressed="#ffffff"
                    fab:fab_size="mini"
                    fab:fab_title="WATCHED" />
            </com.getbase.floatingactionbutton.FloatingActionsMenu>


        </RelativeLayout>

    </LinearLayout>
</ScrollView>
